@@ -38,22 +38,25 @@
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                     <release>${java.version}</release>
+                    <jdkToolchain>
+                        <version>9</version>
+                    </jdkToolchain>
 
-                    <compilerArgs>
-                        <arg>--module-source-path=./*/src/main/java;./*/src/test/java/;</arg>
-                        <arg>
-                            --source-path=/G/projets/wires/wires/wires/apimod/src/main/java;/G/projets/wires/wires/wires/apimod/src/test/java;/G/projets/wires/wires/wires/clientmod/src/test/java;/G/projets/wires/wires/wires/clientmod/src/main/java;
-                        </arg>
-                        <arg>-Xlint:all</arg>
-                        <arg>
-                            --patch-module=clientmod=/G/projets/wires/wires/wires/clientmod/target/classes;/G/projets/wires/wires/wires/clientmod/src/test/java;/G/projets/wires/wires/wires/apimod/target/apimod-1.0-SNAPSHOT.jar;/G/projets/wires/wires/wires/apimod/target/apimod-1.0-SNAPSHOT-tests.jar;
-                        </arg>
-                        <arg>--add-reads=apimod=ALL-UNNAMED</arg>
-                        <arg>--add-reads=clientmod=ALL-UNNAMED</arg>
-                        <arg>--add-exports=apimod/api=ALL-UNNAMED</arg>
-                        <arg>--add-exports=clientmod/client=ALL-UNNAMED</arg>
-                        <arg>--add-modules=apimod</arg>
-                    </compilerArgs>
+                    <!--<compilerArgs>-->
+                        <!--<arg>&#45;&#45;module-source-path=./*/src/main/java;./*/src/test/java/;</arg>-->
+                        <!--<arg>-->
+                            <!--&#45;&#45;source-path=/G/projets/wires/wires/wires/apimod/src/main/java;/G/projets/wires/wires/wires/apimod/src/test/java;/G/projets/wires/wires/wires/clientmod/src/test/java;/G/projets/wires/wires/wires/clientmod/src/main/java;-->
+                        <!--</arg>-->
+                        <!--<arg>-Xlint:all</arg>-->
+                        <!--<arg>-->
+                            <!--&#45;&#45;patch-module=clientmod=/G/projets/wires/wires/wires/clientmod/target/classes;/G/projets/wires/wires/wires/clientmod/src/test/java;/G/projets/wires/wires/wires/apimod/target/apimod-1.0-SNAPSHOT.jar;/G/projets/wires/wires/wires/apimod/target/apimod-1.0-SNAPSHOT-tests.jar;-->
+                        <!--</arg>-->
+                        <!--<arg>&#45;&#45;add-reads=apimod=ALL-UNNAMED</arg>-->
+                        <!--<arg>&#45;&#45;add-reads=clientmod=ALL-UNNAMED</arg>-->
+                        <!--<arg>&#45;&#45;add-exports=apimod/api=ALL-UNNAMED</arg>-->
+                        <!--<arg>&#45;&#45;add-exports=clientmod/client=ALL-UNNAMED</arg>-->
+                        <!--<arg>&#45;&#45;add-modules=apimod</arg>-->
+                    <!--</compilerArgs>-->
                 </configuration>
             </plugin>
 
